--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-CLOUDINARY_CLOUD_NAME=dwjqpax3y
-CLOUDINARY_API_KEY=214131155363581
-CLOUDINARY_API_SECRET=yw4B9pGg8JhiJIm0lO8-oJlnPQA
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
 PORT=5000
 MONGO_URI=mongodb://localhost:27017/
